[gd_scene load_steps=17 format=3 uid="uid://b5cy2uoweljeu"]

[ext_resource type="Texture2D" uid="uid://dgr6g2y68rt" path="res://Sprites/img_idle.png" id="1_nglj7"]
[ext_resource type="Script" uid="uid://jailffu33srt" path="res://Scripts/Player.gd" id="1_ua86p"]
[ext_resource type="Texture2D" uid="uid://j2h1vibwcod5" path="res://Sprites/img_down.png" id="2_d43fj"]
[ext_resource type="Texture2D" uid="uid://inuyuqobl2an" path="res://Sprites/img_cae.png" id="3_1efbv"]
[ext_resource type="Texture2D" uid="uid://ci6fvgjohklw1" path="res://Sprites/img_jump.png" id="4_a6jq8"]
[ext_resource type="Texture2D" uid="uid://cfonqce2om8aq" path="res://Sprites/img_ladocae.png" id="5_4vk2q"]
[ext_resource type="Texture2D" uid="uid://bhw3tw2e7h2h7" path="res://Sprites/img_ladojump.png" id="6_rleys"]
[ext_resource type="Texture2D" uid="uid://cpg4wm181xj1d" path="res://Sprites/img_run.png" id="7_o1mad"]
[ext_resource type="Texture2D" uid="uid://dg27cgldm7ndr" path="res://Sprites/img_suelo.png" id="8_kcdir"]
[ext_resource type="Texture2D" uid="uid://dhodynac1lr2l" path="res://Sprites/img_up.png" id="9_xhw0c"]
[ext_resource type="Texture2D" uid="uid://dqv001ru7u2sr" path="res://Sprites/img_hit.png" id="10_33yml"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f0dsx"]
radius = 19.0
height = 162.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2od6q"]
radius = 22.0
height = 122.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vqgs0"]
radius = 24.0
height = 92.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dbyhq"]
radius = 83.5225

[sub_resource type="CircleShape2D" id="CircleShape2D_tgyno"]
radius = 84.0952

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_ua86p")
metadata/_edit_lock_ = true

[node name="ColiUp" type="CollisionShape2D" parent="."]
position = Vector2(0, -81)
shape = SubResource("CapsuleShape2D_f0dsx")
debug_color = Color(0.587937, 0.455196, 0.801223, 0.42)
metadata/_edit_lock_ = true

[node name="ColiMiddle" type="CollisionShape2D" parent="."]
position = Vector2(0, -61)
shape = SubResource("CapsuleShape2D_2od6q")
debug_color = Color(0.587937, 0.455196, 0.801223, 0.42)
metadata/_edit_lock_ = true

[node name="ColiDown" type="CollisionShape2D" parent="."]
position = Vector2(0, -46)
shape = SubResource("CapsuleShape2D_vqgs0")
debug_color = Color(0.587937, 0.455196, 0.801223, 0.42)
metadata/_edit_lock_ = true

[node name="Estados" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="ImgIdle" type="Sprite2D" parent="Estados"]
visible = false
position = Vector2(3, -90)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_nglj7")
metadata/_edit_lock_ = true

[node name="Msk" type="Area2D" parent="Estados/ImgIdle"]
collision_layer = 2
collision_mask = 0
monitoring = false
metadata/_edit_lock_ = true

[node name="Coli1" type="CollisionShape2D" parent="Estados/ImgIdle/Msk"]
position = Vector2(24, -200)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="Coli2" type="CollisionShape2D" parent="Estados/ImgIdle/Msk"]
position = Vector2(12, -12)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="Coli3" type="CollisionShape2D" parent="Estados/ImgIdle/Msk"]
position = Vector2(0, 204)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="ImgDown" type="Sprite2D" parent="Estados"]
visible = false
position = Vector2(-4, -56)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_d43fj")
metadata/_edit_lock_ = true

[node name="Msk" type="Area2D" parent="Estados/ImgDown"]
collision_layer = 2
collision_mask = 0
monitoring = false
metadata/_edit_lock_ = true

[node name="Coli1" type="CollisionShape2D" parent="Estados/ImgDown/Msk"]
position = Vector2(-8, -60)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="Coli2" type="CollisionShape2D" parent="Estados/ImgDown/Msk"]
position = Vector2(4, 52)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="Coli3" type="CollisionShape2D" parent="Estados/ImgDown/Msk"]
position = Vector2(16, 148)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="ImgCae" type="Sprite2D" parent="Estados"]
visible = false
position = Vector2(-1, -68)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_1efbv")
metadata/_edit_lock_ = true

[node name="Msk" type="Area2D" parent="Estados/ImgCae"]
collision_layer = 2
collision_mask = 0
monitoring = false
metadata/_edit_lock_ = true

[node name="Coli1" type="CollisionShape2D" parent="Estados/ImgCae/Msk"]
position = Vector2(24, -76)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="Coli2" type="CollisionShape2D" parent="Estados/ImgCae/Msk"]
position = Vector2(20, 36)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="Coli3" type="CollisionShape2D" parent="Estados/ImgCae/Msk"]
position = Vector2(8, 156)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="ImgJump" type="Sprite2D" parent="Estados"]
visible = false
position = Vector2(3, -89)
scale = Vector2(0.25, 0.25)
texture = ExtResource("4_a6jq8")
metadata/_edit_lock_ = true

[node name="Msk" type="Area2D" parent="Estados/ImgJump"]
collision_layer = 2
collision_mask = 0
monitoring = false
metadata/_edit_lock_ = true

[node name="Coli1" type="CollisionShape2D" parent="Estados/ImgJump/Msk"]
position = Vector2(-20, -236)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="Coli2" type="CollisionShape2D" parent="Estados/ImgJump/Msk"]
position = Vector2(-20, -36)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="Coli3" type="CollisionShape2D" parent="Estados/ImgJump/Msk"]
position = Vector2(-24, 168)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="ImgLadocae" type="Sprite2D" parent="Estados"]
visible = false
position = Vector2(-5, -83)
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_4vk2q")
metadata/_edit_lock_ = true

[node name="Msk" type="Area2D" parent="Estados/ImgLadocae"]
collision_layer = 2
collision_mask = 0
monitoring = false
metadata/_edit_lock_ = true

[node name="Coli1" type="CollisionShape2D" parent="Estados/ImgLadocae/Msk"]
position = Vector2(8, -144)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="Coli2" type="CollisionShape2D" parent="Estados/ImgLadocae/Msk"]
position = Vector2(8, 32)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="Coli3" type="CollisionShape2D" parent="Estados/ImgLadocae/Msk"]
position = Vector2(68, 200)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="ImgLadojump" type="Sprite2D" parent="Estados"]
visible = false
position = Vector2(-1, -93)
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_rleys")
metadata/_edit_lock_ = true

[node name="Msk" type="Area2D" parent="Estados/ImgLadojump"]
collision_layer = 2
collision_mask = 0
monitoring = false
metadata/_edit_lock_ = true

[node name="Coli1" type="CollisionShape2D" parent="Estados/ImgLadojump/Msk"]
position = Vector2(112, -204)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="Coli2" type="CollisionShape2D" parent="Estados/ImgLadojump/Msk"]
position = Vector2(36, -32)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="Coli3" type="CollisionShape2D" parent="Estados/ImgLadojump/Msk"]
position = Vector2(-52, 192)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="ImgRun" type="Sprite2D" parent="Estados"]
visible = false
position = Vector2(7, -92)
scale = Vector2(0.25, 0.25)
texture = ExtResource("7_o1mad")
metadata/_edit_lock_ = true

[node name="Msk" type="Area2D" parent="Estados/ImgRun"]
collision_layer = 2
collision_mask = 0
monitoring = false
metadata/_edit_lock_ = true

[node name="Coli1" type="CollisionShape2D" parent="Estados/ImgRun/Msk"]
position = Vector2(104, -188)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="Coli2" type="CollisionShape2D" parent="Estados/ImgRun/Msk"]
position = Vector2(28, -28)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="Coli3" type="CollisionShape2D" parent="Estados/ImgRun/Msk"]
position = Vector2(-48, 168)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="ImgSuelo" type="Sprite2D" parent="Estados"]
visible = false
position = Vector2(3, -33)
scale = Vector2(0.25, 0.25)
texture = ExtResource("8_kcdir")
metadata/_edit_lock_ = true

[node name="Msk" type="Area2D" parent="Estados/ImgSuelo"]
collision_layer = 2
collision_mask = 0
monitoring = false
metadata/_edit_lock_ = true

[node name="Coli1" type="CollisionShape2D" parent="Estados/ImgSuelo/Msk"]
position = Vector2(-64, 28)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="Coli2" type="CollisionShape2D" parent="Estados/ImgSuelo/Msk"]
position = Vector2(-4, 68)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="Coli3" type="CollisionShape2D" parent="Estados/ImgSuelo/Msk"]
position = Vector2(36, -48)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="ImgUp" type="Sprite2D" parent="Estados"]
visible = false
position = Vector2(2, -91)
scale = Vector2(0.25, 0.25)
texture = ExtResource("9_xhw0c")
metadata/_edit_lock_ = true

[node name="Msk" type="Area2D" parent="Estados/ImgUp"]
collision_layer = 2
collision_mask = 0
monitoring = false
metadata/_edit_lock_ = true

[node name="Coli1" type="CollisionShape2D" parent="Estados/ImgUp/Msk"]
position = Vector2(-44, -204)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="Coli2" type="CollisionShape2D" parent="Estados/ImgUp/Msk"]
position = Vector2(-8, -32)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="Coli3" type="CollisionShape2D" parent="Estados/ImgUp/Msk"]
position = Vector2(-8, 196)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="ImgHit" type="Sprite2D" parent="Estados"]
position = Vector2(0, -86)
scale = Vector2(0.25, 0.25)
texture = ExtResource("10_33yml")
metadata/_edit_lock_ = true

[node name="Msk" type="Area2D" parent="Estados/ImgHit"]
collision_layer = 2
collision_mask = 0
monitoring = false
metadata/_edit_lock_ = true

[node name="Coli1" type="CollisionShape2D" parent="Estados/ImgHit/Msk"]
position = Vector2(0, -208)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="Coli2" type="CollisionShape2D" parent="Estados/ImgHit/Msk"]
position = Vector2(-48, -40)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="Coli3" type="CollisionShape2D" parent="Estados/ImgHit/Msk"]
position = Vector2(-48, 172)
shape = SubResource("CircleShape2D_dbyhq")
metadata/_edit_lock_ = true

[node name="Hit" type="Area2D" parent="Estados/ImgHit"]
collision_layer = 0
collision_mask = 2
monitorable = false
metadata/_edit_lock_ = true

[node name="Coli1" type="CollisionShape2D" parent="Estados/ImgHit/Hit"]
position = Vector2(200, -40)
shape = SubResource("CircleShape2D_tgyno")
disabled = true
debug_color = Color(0.840015, 0.329566, 0.514883, 0.42)
metadata/_edit_lock_ = true

[node name="RelojDamage" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="area_entered" from="Estados/ImgHit/Hit" to="." method="_on_hit_area_entered"]
[connection signal="area_exited" from="Estados/ImgHit/Hit" to="." method="_on_hit_area_exited"]
[connection signal="timeout" from="RelojDamage" to="." method="_on_reloj_damage_timeout"]
